<resources>
    <string name="app_name">VeterinariaSQLite</string>

    <string name="lblNombre">Nombre:</string>
    <string name="lblTelefono">Teléfono:</string>
    <string name="lblEmail">Email:</string>

    <string name="lblFechaNacimiento">F. nacimiento:</string>
    <string name="lblEstaVacunado">¿Vacunado?:</string>
    <string name="lblSexo">Sexo:</string>
    <string name="lblRaza">Raza:</string>
    <string name="lblCaracteristicas">Características:</string>
    <string name="lblComentarios">Comentarios:</string>
</resources>